[package]
name = "diffusion-onekey-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downloader = "0.2.7"
md5 = "0.7.0"
sudo = "0.6.0"
tokio = { version = "1.27.0", features = ["rt", "macros", "rt-multi-thread"] }
bollard = "0.14.0"
termion = "2.0.1"
futures-util = "0.3.28"